--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_PORT=8080
-REDIS_URL=localhost
+REDIS_URL=redis://default:redispw@localhost:49153
 S3_BUCKET=aprendpro-data
 
 # Used only for local development
