--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vendia/serverless-express": "^4.10.1",
     "aws-lambda": "^1.0.7",
     "aws-serverless-express": "^3.4.0",
+    "dotenv": "^16.0.1",
     "ioredis": "^5.2.2",
     "lodash": "^4.17.21",
     "reflect-metadata": "^0.1.13",
