--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
-APP_PORT=8080
-REDIS_URL=redis://default:redispw@localhost:49153
-S3_BUCKET=aprendpro-data
+APP_PORT=2222
+REDIS_URL=http://54.164.231.25
+S3_BUCKET=""
+REDIS_PORT=6379
+BUCKET_NAME = botatendimento
 
 # Used only for local development
-AWS_ACCESS_KEY_ID=dummy
-AWS_SECRET_ACCESS_KEY=fake
-AWS_DEFAULT_REGION=narnia
+AWS_ACCESS_KEY_ID=AKIATWUOBCPS7WUBVZOX
+AWS_SECRET_ACCESS_KEY=HD6A0wxxBV30+ZP9ldauQPAObPyS3DSRa2/Cb+FK
+AWS_DEFAULT_REGION=us-east-1
